@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.7.20) unstable; urgency=low
   * access-log: log the site name
   * python: removed unused function write_packet()
   * python: split the module beng_proxy.translation
+  * python: allow overriding query string and param in absolute_uri()
 
  --
 
